# Programaci-n-2-TPI

./: .gitignore  Arquero.h  CMakeLists.txt  Guerrero.h  Medico.h  README.md  adminarchivo.cpp  adminarchivo.h  adminclase.cpp  adminclase.h  adminmusica.cpp  adminmusica.h  animacion.cpp  animacion.h  archivos.txt  ataque.cpp  ataque.h  celda.cpp  celda.h  celdaterrestre.cpp  celdaterrestre.h  claseTrabajo.cpp  claseTrabajo.h  combate.cpp  combate.h  constantes.h  cursor.cpp  cursor.h  defaultcelda.cpp  generico.h  grilla.cpp  grilla.h  ia.cpp  ia.h  juego.cpp  juego.h  main.cpp  makefile  managerjuego.cpp  managerjuego.h  (+26 more)
